--- a/essentials/navigation.mdx
+++ b/essentials/navigation.mdx
@@ -1,66 +1,74 @@
----
-title: 'Navigation'
-description: 'The navigation field in mint.json defines the pages that go in the navigation menu'
-icon: 'map'
----
-
-The navigation menu is the list of links on every website.
-
-You will likely update `mint.json` every time you add a new page. Pages do not show up automatically.
-
-## Navigation syntax
-
-Our navigation syntax is recursive which means you can make nested navigation groups. You don't need to include `.mdx` in page names.
-
-<CodeGroup>
-
-```json Regular Navigation
 "navigation": [
-    {
-        "group": "Getting Started",
-        "pages": ["quickstart"]
-    }
-]
-```
-
-```json Nested Navigation
-"navigation": [
-    {
+  {
+    "group": "🚀 Welcome",
+    "pages": [
+      "README",
+      {
+        "group": "What is SOON？",
+        "pages": [
+          "welcome/what-is-soon/core-technologies",
+          "welcome/what-is-soon/features",
+          "welcome/what-is-soon/roadmap"
+        ]
+      },
+      "welcome/super-adoption-stack-sas",
+      "welcome/why-svm"
+    ]
+  },
+  {
+    "group": "Using SOON",
+    "pages": [
+      "using-soon/network-info",
+      {
         "group": "Getting Started",
         "pages": [
-            "quickstart",
-            {
-                "group": "Nested Reference Pages",
-                "pages": ["nested-reference-page"]
-            }
+          "using-soon/getting-started/README",
+          {
+            "group": "SOON Testnet",
+            "pages": [
+              "using-soon/getting-started/soon-testnet/README",
+              "using-soon/getting-started/soon-testnet/wallet",
+              "using-soon/getting-started/soon-testnet/soon-faucet",
+              "using-soon/getting-started/soon-testnet/bridge-your-assets",
+              "using-soon/getting-started/soon-testnet/soon-testnet-explorer"
+            ]
+          },
+          {
+            "group": "SOON Devnet",
+            "pages": [
+              "using-soon/getting-started/soon-devnet/README",
+              "using-soon/getting-started/soon-devnet/wallet",
+              "using-soon/getting-started/soon-devnet/soon-faucet",
+              "using-soon/getting-started/soon-devnet/bridge-your-assets",
+              "using-soon/getting-started/soon-devnet/soon-devnet-explorer"
+            ]
+          }
         ]
-    }
+      }
+    ]
+  },
+  {
+    "group": "🔨 Building on SOON",
+    "pages": [
+      "building-on-soon/set-up-the-development-environment/README",
+      "building-on-soon/set-up-the-development-environment/install-rust",
+      "building-on-soon/deploy-smart-contracts-and-interact/README"
+    ]
+  },
+  {
+    "group": "⚙️ TECH Architecture",
+    "pages": [
+      "tech-architecture/soon-stack-architecture/README",
+      "tech-architecture/intersoon",
+      "tech-architecture/decoupled-svm"
+    ]
+  },
+  {
+    "group": "📖 Resources",
+    "pages": [
+      "resources/developer",
+      "resources/blog",
+      "resources/faqs"
+    ]
+  }
 ]
-```
-
-</CodeGroup>
-
-## Folders
-
-Simply put your MDX files in folders and update the paths in `mint.json`.
-
-For example, to have a page at `https://yoursite.com/your-folder/your-page` you would make a folder called `your-folder` containing an MDX file called `your-page.mdx`.
-
-<Warning>
-
-You cannot use `api` for the name of a folder unless you nest it inside another folder. Mintlify uses Next.js which reserves the top-level `api` folder for internal server calls. A folder name such as `api-reference` would be accepted.
-
-</Warning>
-
-```json Navigation With Folder
-"navigation": [
-    {
-        "group": "Group Name",
-        "pages": ["your-folder/your-page"]
-    }
-]
-```
-
-## Hidden Pages
-
-MDX files not included in `mint.json` will not show up in the sidebar but are accessible through the search bar and by linking directly to them.
